- Filter number sequencing cycles by request category (GAIIx vs HiSeq 2000)
- Order radio buttons (ascending sort) for number seq cycles 
- Order radio buttons for single vs. paired ends
- Add notes to number sequencing cycles
- Allow more than 1 sequencing lane per sample on Illumina new requests


4.7 patch (June 22, 2010)
------------------------
- Fix bug that was causing null reference on lab combo when non-admin user submitting a request
- Fixed bug that was causing # of additional sequencing lanes on 'add services' to be non-editable for non-admin users
- Don't require sample prep method to be filled in when adding lanes since old requests won't have this filled in
- Fix null ref in sample setup for onGetLab parentDocument.filteredProjectList.refresh()

4.7 (June 20, 2010)
-------------------------
- Ability to add services to an experiment request (amend request)
- Add filter in last 3 months experiment filter
- Include application in  experiment tree label for advanced search, amend request  
- Dictionary editor - maintain selection when dictionary entry added, edited, removed
- Maintain the last selection on billing period combo on Billing screen
- Fixed some compile warnings related to parameterized collections.
- Add lastModifyDate to request (experiment)
- Billing items are now created automatically when new request is submitted or services are added to an existing request.
- Drag-n-drop analysis to analysis group(s).
- Make printable experiment form more print-friendly.
- Add revision number to end of request number when services are added (example 7425R -> 7425R1 -> 7425R2).
- Delete billing items associated with request when request is deleted (warn first).
- Fix bug that was causing non-existent experiment lookup to interfere with subsequence experiment browses
- Add ability to add, delete samples on edit request window