@@ -225,7 +225,8 @@
 		<property name="sampleConcentrationpM" column="sampleConcentrationpM" type="big_decimal"/>
 		<property name="pipelineDate" column="pipelineDate" type="date"/>
 		<property name="pipelineFailed" column="pipelineFailed" type="string"/>
-        <property name="isControl" column="isControl" type="string"/>		
+    <property name="isControl" column="isControl" type="string"/>		
+    <property name="phiXErrorRate" column="phiXErrorRate" type="big_decimal"/>
 	</class>	   
 	 
     <!-- hci.gnomex.model.Hybridization -->
