@@ -13,6 +13,7 @@ GNomEx Release Notes
 - Order radio buttons for single vs. paired ends
 - Add notes to number sequencing cycles
 - Allow more than 1 sequencing lane per sample on Illumina new requests
+- Added PhiX error rate to Flow Cell Channel
 
 
 4.7 patch (June 22, 2010)
